Added grim screenshotting and Wezterm Updates + VLC

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,24 +1,18 @@
-#True Color
-set-option -sa terminal-overrides ",xterm:Tc"
-
-#Enable Mouse
-set -g mouse on
-
-#Prefix
-unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
-
-#Current Directory
-bind '"' split-window -v -v "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-
 #Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigitaor'
-set -g @plugin 'nordtheme/tmux'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'egel/tmux-gruvbox'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-#Run
+#Gruvbox
+set -g @tmux-gruvbox 'dark'
+
+#Enable Mouse Support
+set -g mouse on
+
+#Remap Prefix
+set -g prefix 'C-Space'
+
+#Initialize TMUX Plugin Manager
 run '~/.tmux/plugins/tpm/tpm'
